# TubeDrop

./: Makefile  README.md  compose.yml  dockerfile  pyproject.toml
src/: core.py  errors.py  main.py  models.py  utils.py
src/schemas/: youtube.py
