[project]
name = "youtube-downloader"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = ["fastapi>=0.116.1", "uvicorn>=0.35.0", "yt-dlp>=2025.7.21"]

[dependency-groups]
dev = ["black>=25.1.0", "isort>=6.0.1", "mypy>=1.15.0", "pylint>=3.3.7"]

[tool.mypy]
ignore_missing_imports = true
